--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         		<li class="level"><i class="fa fa-star"></i></li>
         	</ul>
 
+
             <span class="moves">0</span> Moves
+
+            <span class="timer">00:00</span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
