feat: Score panel justified.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li class="level"><i class="fa fa-star"></i></li>
-        		<li class="level"><i class="fa fa-star"></i></li>
-        		<li class="level"><i class="fa fa-star"></i></li>
-        	</ul>
+            <div>
+                <ul class="stars">
+                    <li class="level"><i class="fa fa-star"></i></li>
+                    <li class="level"><i class="fa fa-star"></i></li>
+                    <li class="level"><i class="fa fa-star"></i></li>
+                </ul>
+                <span class="moves">0</span> Moves
+            </div>
 
-
-            <span class="moves">0</span> Moves
-
-            <span class="timer">00:00</span>
+            <div>
+                <span class="fa fa-clock-o"></span>
+                <span class="timer">00:00</span>
+            </div>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
