--- a/index.html
+++ b/index.html
@@ -88,7 +88,16 @@
             </li>
         </ul>
     </div>
+</body>
+    <div class="modal" id="modal">
+        <div class="modal-content">
+            <h1>Congratulations!</h1>
+            <h2>You Won!</h2>
+            <p id="text-congratulation"></p>
+
+            <button class="close-button" id="close-button">Play Again</button>
+        </div>
+    </div>
 
     <script src="js/app.js"></script>
-</body>
 </html>
