--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
@@ -18,23 +18,28 @@
         </header>
 
         <section class="score-panel">
-            <div>
-                <ul class="stars">
-                    <li class="level"><i class="fa fa-star"></i></li>
-                    <li class="level"><i class="fa fa-star"></i></li>
-                    <li class="level"><i class="fa fa-star"></i></li>
-                </ul>
-                <span class="moves">0</span> Moves
+            <div class="score-title">
+                <h2>SCORE</h2>
             </div>
+            <div class="score-values">
+                <div>
+                    <ul class="stars">
+                        <li class="level"><i class="fa fa-star"></i></li>
+                        <li class="level"><i class="fa fa-star"></i></li>
+                        <li class="level"><i class="fa fa-star"></i></li>
+                    </ul>
+                    <span class="moves">0</span> Moves
+                </div>
 
-            <div>
-                <span class="fa fa-clock-o"></span>
-                <span class="timer">00:00</span>
+                <div>
+                    <span class="fa fa-clock-o"></span>
+                    <span class="timer">00:00</span>
+                </div>
+
+                <div class="restart">
+                    <i class="fa fa-repeat"></i>
+                </div>
             </div>
-
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
         </section>
 
         <ul class="deck">
@@ -88,7 +93,6 @@
             </li>
         </ul>
     </div>
-</body>
     <div class="modal" id="modal">
         <div class="modal-content">
             <h1>Congratulations!</h1>
@@ -98,6 +102,6 @@
             <button class="close-button" id="close-button">Play Again</button>
         </div>
     </div>
-
     <script src="js/app.js"></script>
+</body>
 </html>
