fix: Altered panel score view.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>SCORE</h2>
             </div>
             <div class="score-values">
-                <div>
+                <div class="score-stars">
                     <ul class="stars">
                         <li class="level"><i class="fa fa-star"></i></li>
                         <li class="level"><i class="fa fa-star"></i></li>
@@ -31,7 +31,7 @@
                     <span class="moves">0</span> Moves
                 </div>
 
-                <div>
+                <div class="score-timer">
                     <span class="fa fa-clock-o"></span>
                     <span class="timer">00:00</span>
                 </div>
